# netradiant.wip

./: .gitignore  CMakeLists.txt  Makefile  download-gamepacks.sh
cmake/: FindGLIB.cmake  Toolchain-mingw-w64.cmake  cross-toolchain-mingw64.cmake
contrib/bobtoolz/: CMakeLists.txt
contrib/brushexport/: CMakeLists.txt
contrib/hydratoolz/: plugin.cpp
contrib/prtview/: CMakeLists.txt
contrib/shaderplug/: CMakeLists.txt
contrib/sunplug/: CMakeLists.txt
contrib/ufoaiplug/: CMakeLists.txt
games/UnrealArenaPack/games/: unrealarena.game
games/UnrealArenaPack/unrealarena.game/: default_build_menu.xml
plugins/: CMakeLists.txt
plugins/archivepak/: CMakeLists.txt
plugins/archivewad/: CMakeLists.txt
plugins/archivezip/: CMakeLists.txt
plugins/entity/: CMakeLists.txt
plugins/image/: CMakeLists.txt
plugins/imagehl/: CMakeLists.txt
plugins/imagepng/: CMakeLists.txt
plugins/imageq2/: CMakeLists.txt
plugins/imagewebp/: CMakeLists.txt
plugins/mapq3/: CMakeLists.txt
plugins/mapxml/: CMakeLists.txt
plugins/md3model/: CMakeLists.txt
plugins/model/: CMakeLists.txt
plugins/shaders/: CMakeLists.txt
plugins/vfspk3/: CMakeLists.txt
radiant/: CMakeLists.txt  environment.cpp  main.cpp  mainframe.cpp  map.h  selection.cpp  url.cpp
tools/: CMakeLists.txt
tools/quake3/: CMakeLists.txt
tools/quake3/common/: aselib.c  scriplib.c
tools/quake3/q3map2/: bsp.c  bspfile_abstract.c  convert_ase.c  convert_bsp.c  convert_obj.c  decals.c  exportents.c  game_unrealarena.h  help.c  image.c  light.c  light_ydnar.c  lightmaps_ydnar.c  main.c  map.c  model.c  path_init.c  portals.c  q3map2.h  shaders.c  surface.c  surface_extra.c  surface_meta.c  vis.c  writebsp.c
